# OS_Ex3

./: Barrier.cpp  Barrier.h  CMakeLists.txt  Makefile  MapReduceFramework.cpp  MapReduceFramework2.cpp  README
Josh Files/: (JOSH)CMakeLists.txt
SuppliedFiles/sampleclient/: SampleClient.cpp
test_clients/: bigClient.cpp  eurovisionClient.cpp
